# pysephone

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA_SOURCES.md  README.md  pyproject.toml
.github/workflows/: publish.yml
notebooks/: apple_cf_models.ipynb  beta_gdd_alphaearth.ipynb  beta_gdd_pep725_apple.ipynb  beta_gdd_pep725_apple_cultivar_profiles.ipynb  beta_gdd_species_comparison.ipynb  beta_gdd_synthetic_recovery.ipynb  beta_gdd_yedoensis.ipynb  beta_gdd_yedoensis_ii.ipynb  bloombench_extended.ipynb  bloombench_extended_hpo.ipynb  bloombench_global_map.ipynb  cf_models_pep725_fruit_trees.ipynb  cherry_blossom_cf_models.ipynb  cherry_blossom_cf_models_per_location.ipynb  dataset_adequacy_gmu_japan_yedoensis.ipynb  dataset_adequacy_pep725_fruit_trees.ipynb  dataset_adequacy_sargentii.ipynb  download_agera5.ipynb  download_alphaearth.ipynb  embedding_visualization.ipynb  embedding_visualization_single_year.ipynb  gmu_pep725_cherry_overlap.ipynb  japan_yedoensis_sargentii_analysis.ipynb  japan_yedoensis_sargentii_draft.ipynb  lstm_cherry_exploration.ipynb  model_exploration.ipynb  model_exploration_2d.ipynb  multispecies_transfer.ipynb  pep725_fruit_tree_outlier_audit.ipynb  phylogeny_fruit_trees.ipynb  phylogeny_pep725_temp.ipynb  pvtt_wheat_exploration.ipynb  pvtt_wheat_exploration_v2.ipynb  pvtt_wheat_temperature_analysis.ipynb  pvtt_winter_wheat.ipynb  species_lstm_comparison.ipynb  species_lstm_loso.ipynb  species_lstm_subsampling.ipynb  unusual_seasons_gmu_cherry.ipynb  unusual_seasons_pep725_fruit_trees.ipynb  (+2 more)
scripts/: build_agera5_cache.py  build_common_caches.sh  build_feature_cache.py  check_pep725_download.py  export_notebook_pdf.py
scripts/misc/: pvtt_pep725_winter_wheat.sh
src/pysephone/: __init__.py  constants.py  paths.py
src/pysephone/benchmarks/: __init__.py
src/pysephone/benchmarks/bloombench/: README.md  __init__.py  __main__.py  cli.py  compare.py  config.py  datasets.py  fit.py  runner.py
src/pysephone/data/: source.py
src/pysephone/data/agera5/: download.py
src/pysephone/data/alphaearth/: __init__.py  obtain_embeddings.py
src/pysephone/data/elevation/: __init__.py  download.py
src/pysephone/data/gmu_cherry/: bloom_doy.py  download.py  regions_data.py  source.py
src/pysephone/data/openmeteo/: download.py
src/pysephone/data/pep725/: README.md  __init__.py  download.py  source.py  util.py
src/pysephone/data/resources/: load_admin_boundaries.py
src/pysephone/data/usa_npn/: __init__.py  download.py  source.py
src/pysephone/data/worldclim/: __init__.py  download.py
src/pysephone/dataset/: __init__.py  dataset.py  observations.py
src/pysephone/dataset/legacy/: base.py  dataset.py
src/pysephone/dataset/preprocessing/: gmu_cherry.py  pep725.py  usa_npn.py
src/pysephone/dataset/registry/: __init__.py  gmu_cherry.py  pep725.py  usa_npn.py
src/pysephone/dataset/util/: agera5.py  alphaearth.py  calendar.py  daylength.py  elevation.py  fake_weather.py  feature_cache.py  (+5 more)
src/pysephone/evaluation/: __init__.py  model_comparison.py  regression.py
src/pysephone/models/: __init__.py  base.py  beta_gdd.py  bspline_gdd.py  cf.py  cnn_1d.py  gdd.py  gru.py  hybrid.py  linear_trend.py  lstm.py  lstm_ctx.py  mean.py  process_based.py  pvtt.py  random_forest.py  torch_base.py  transformer.py  unimodal_hybrid.py  wheat_hybrid.py  xgb.py
src/pysephone/run/: fit_eval.py  readme_figures.py  visualize_datasets.py
src/pysephone/utils/: func.py  func_torch.py  species_encoder.py
src/pysephone/visualize/: dataset.py
tests/: test_agera5.py  test_bloombench.py  test_dataset.py  test_daylength.py  test_evaluation.py  test_gdd.py  test_pep725_source.py  test_phylogeny.py  test_torch_base.py  test_usa_npn_source.py
(+26 files in other folders)
